k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: davechedjoun/client
          ports:
            - containerPort : 3000
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
