k8s/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      name: comments-pod
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: davechedjoun/comments
          ports:
            - containerPort : 4001
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - port: 4001
      targetPort: 4001
