k8s/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      name: query-pod
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: davechedjoun/query
          ports:
            - containerPort : 4002
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: query-clusterip
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - port: 4002
      targetPort: 4002
